--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "node-thermal-printer": "^4.1.2"
+    "node-thermal-printer": "^4.1.2",
+    "@tillpos/xml-escpos-helper": "^0.2.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
